# memo-rs

./: .gitignore  Cargo.toml  README.md
contact-manager-rs/: Cargo.toml  README.md
contact-manager-rs/src/: data.csv  main.rs
grep/: Cargo.toml
grep/src/: main.rs  text.txt
handle-csv/: Cargo.toml
handle-csv/src/: data.csv  main.rs
handle-file/: Cargo.toml
handle-file/src/: main.rs
htop/: Cargo.toml  README.md
htop/src/: index.css  index.html  index.mjs  main.rs
http-server/public/: hello.html  index.html
http-server/src/: main.rs  server.rs  website_handler.rs
http-server/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
mars_calc/: README.md
mars_calc/src/: main.rs
memo-rs/: README.md
pass-manager/: Cargo.toml
pass-manager/src/: main.rs
rusty-engine/: Cargo.toml
rusty-engine/src/: main.rs
satellite/: Cargo.toml
satellite/src/: main.rs
src/: main.rs
type-state-pattern/: Cargo.toml
type-state-pattern/src/: main.rs
ultimate/: Cargo.toml
ultimate/src/: main.rs
ultimate/src/exercise/: channel_thread.rs  closures_iterators.rs  errors.rs  idiomatic.rs  mod.rs  testing.rs  thread_channel.rs  traits.rs
ultimate/test/: integration_test.rs
